# autostartmgr

./: README.md  example-all-options.toml  pyproject.toml
autostartmgr/: __init__.py  asmgrctl_cli.py  asmgrctl_socket.py  asmgrdaemon.py  log.py  paths.py
