[tool.poetry]
name = "autostartmgr"
version = "0.1.0"
description = ""
authors = ["PaddeCraft <70023807+PaddeCraft@users.noreply.github.com>"]

[tool.poetry.scripts]
asmgrctl = "autostartmgr.asmgrctl_cli:run"
asmgrd = "autostartmgr.asmgrdaemon:start"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.1"
typer = "^0.7.0"
toml = "^0.10.2"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
